--- a/CourseApplication/Views/Account/OpenPersonalCabinet.cshtml
+++ b/CourseApplication/Views/Account/OpenPersonalCabinet.cshtml
@@ -1,42 +1,34 @@
-﻿@model CourseApplication.BLL.VMs.Identity.Register
+﻿@{
+    ViewBag.Title = "User personal cabinet";
+}
 
 <div class="container">
+    <div class="row d-flex justify-content-between my-3">
+        <h3>Personal cabinet</h3>
+    </div>
     <div class="row">
-        <div class="col-4">
-            <h2 class="my-3">Personal cabinet</h2>
-            <h4>User delivery data</h4>
-            <form method="get" asp-controller="UserDeliveryData" asp-action="GetAllUserDeliveryData">
-                <button type="submit" class="btn btn-primary">Manage delivery data</button>
-            </form>
-            <h4>User orders</h4>
-            <a class="btn btn-primary" asp-controller="Order" asp-action="GetAllUserOrders">View my orders</a>
-            <h4>User personal data</h4>
-            <form method="post" asp-controller="Account" asp-action="Register">
-                <div asp-validation-summary="ModelOnly"></div>
-                <div class="form-group">
-                    <label asp-for="Email"></label><br />
-                    <input class="form-control" asp-for="Email" placeholder="Your Email" value="@User.Identity.Name" />
-                    <span asp-validation-for="Email"></span>
+        <div class="w-100">
+            <div class="card mb-3 w-100">
+                <div class="card-header">
+                    <h4>@ViewBag.Username</h4>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Name"></label><br />
-                    <input class="form-control" asp-for="Name" placeholder="Your Username" />
-                    <span asp-validation-for="Name"></span>
+                <div class="card-body">
+                    <h5>Account actions</h5>
+                    <div class="my-1 py-3 border-bottom border-secondary">
+                        <h6>Set delivery data</h6>
+                        <a class="btn btn-primary" asp-controller="UserDeliveryData" asp-action="GetAllUserDeliveryData">Manage delivery data</a>
+                    </div>
+                    <div class="my-1 py-3 border-bottom border-secondary">
+                        <h6>View order archive</h6>
+                        <a class="btn btn-primary" asp-controller="Order" asp-action="GetAllUserOrders">View orders</a>
+                    </div>
+                    <div class="my-1 py-3">
+                        <h6>Manage personal data</h6>
+                        <a class="btn btn-primary" asp-controller="Users" asp-action="ChangePassword" asp-route-id="@ViewBag.UserId">Change password</a>
+                        <a class="btn btn-primary" asp-controller="Users" asp-action="EditUser" asp-route-id="@ViewBag.UserId">Edit account data</a>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Password"></label><br />
-                    <input class="form-control" asp-for="Password" placeholder="Your password" />
-                    <span asp-validation-for="Password"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PasswordConfirm"></label><br />
-                    <input class="form-control" asp-for="PasswordConfirm" placeholder="Retype your password here" />
-                    <span asp-validation-for="PasswordConfirm"></span>
-                </div>
-                <div class="form-group">
-                    <input class="btn btn-primary" type="submit" value="Sign up" />
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
