--- a/CourseApplication/Views/Users/UserList.cshtml
+++ b/CourseApplication/Views/Users/UserList.cshtml
@@ -4,7 +4,7 @@
 }
 
 <a asp-action="CreateUser">Add new user</a>
-<a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="GetRoles">Access Rights</a>
+<a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="UserList">Access Rights</a>
 
 <table class="table">
     <tr>
