--- a/CourseApplication/Views/Cart/GetCartById.cshtml
+++ b/CourseApplication/Views/Cart/GetCartById.cshtml
@@ -27,10 +27,7 @@
                         <div class="card-body">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-sm-3">
-
-                                    </div>
-                                    <div class="col-sm-7">
+                                    <div class="col-sm-10">
                                         <p class="font-weight-light font-italic">Category: <span>@Html.DisplayFor(modelItem => item.CategoryName)</span></p>
                                         <h5 class="text-danger font-weight-bold">USD $@Html.DisplayFor(modelItem => item.Price)</h5>
                                         <p>Quantity: <span>@Html.DisplayFor(modelItem => item.Number)</span></p>
@@ -49,8 +46,11 @@
             }
         }
     </div>
-    <div class="row d-flex justify-content-between my-3">
-        <h4>Total cost: <span class="text-danger">USD $@Html.DisplayFor(model => model.TotalCost)</span></h4>
-        <a class="btn btn-primary" asp-controller="Order" asp-action="CreateNewOrder">Proceed to order</a>
-    </div>
+    @if (Model.PositionList.Count() != 0)
+    {
+        <div class="row d-flex justify-content-between my-3">
+            <h4>Total cost: <span class="text-danger">USD $@Html.DisplayFor(model => model.TotalCost)</span></h4>
+            <a class="btn btn-primary" asp-controller="Order" asp-action="CreateNewOrder">Proceed to order</a>
+        </div>
+    }
 </div>
