--- a/CourseApplication/Views/Product/CreateNewProduct.cshtml
+++ b/CourseApplication/Views/Product/CreateNewProduct.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Product" asp-action="CreateNewProduct">
+        <form method="post" asp-controller="Product" enctype="multipart/form-data" asp-action="CreateNewProduct">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -48,6 +48,10 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <p>Upload file</p>
+                <input class="form-control" asp-for="Files" type="file" />
             </div>
             <div class="input-group">
                 <input type="submit" value="Create" class="btn btn-primary mr-2" />
