--- a/CourseApplication/Views/Product/GetProductById.cshtml
+++ b/CourseApplication/Views/Product/GetProductById.cshtml
@@ -13,7 +13,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5">
-
+                        @foreach (var f in Model.Files)
+                        {
+                            <img src="data:image;base64,@System.Convert.ToBase64String(f.DataFiles)" class="w-100" />
+                        }
                     </div>
                     <div class="col-sm-7">
                         <h4>@Html.DisplayFor(model => model.Name)</h4>
@@ -40,7 +43,7 @@
                             }
                             else
                             {
-                                <h4 class="text-danger font-weight-bold">Sorry, this product is no longer available!</h4>
+                                <h4 class="text-danger font-weight-bold">Sorry, but this product is no longer available!</h4>
                             }
                         }
 
@@ -80,7 +83,7 @@
     <div class="row mt-3 mb-5">
         @foreach (var i in Model.Reviews)
         {
-            <div class="card mb-3">
+            <div class="card mb-3 w-100">
                 <div class="card-header">
                     <h5>
                         @Html.DisplayFor(modelItem => i.Username)
@@ -92,6 +95,10 @@
                 </div>
                 <div class="card-body">
                     <p>@Html.DisplayFor(modelItem => i.Text)</p>
+                    @foreach (var f in i.Files)
+                    {
+                        <img src="data:image;base64,@System.Convert.ToBase64String(f.DataFiles)" width="100" height="100" />
+                    }
                 </div>
             </div>
         }
