--- a/CourseApplication/Views/Review/CreateReview.cshtml
+++ b/CourseApplication/Views/Review/CreateReview.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Review" asp-action="CreateReview">
+        <form asp-controller="Review" enctype="multipart/form-data" asp-action="CreateReview">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="hidden" value=@Guid.NewGuid() asp-for="UserId" class="control-label" />
@@ -28,6 +28,10 @@
                 <label asp-for="Text" class="control-label"></label>
                 <textarea asp-for="Text" class="form-control"></textarea>
                 <span asp-validation-for="Text" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <p>Upload file</p>
+                <input class="form-control" asp-for="Files" type="file" />
             </div>
             <div class="form-group">
                 <button asp-controller="Review" asp-action="CreateReview" asp-route-id="@Model.ProductId" type="submit" class="btn btn-primary">Create review</button>
