--- a/CourseApplication/Views/Roles/UserList.cshtml
+++ b/CourseApplication/Views/Roles/UserList.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<CourseApplication.Models.User>
 
     <h2>User roles control</h2>
+    <a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="GetRoles">Roles List</a>
     <table class="table">
         @foreach (var user in Model)
         {
             <tr>
                 <td>@user.Email</td>
                 <td>
-                    <a class="btn btn-primary" asp-action="EditRoles" asp-route-userid="@user.Id">Access Rights</a>
+                    <a class="btn btn-primary" asp-action="EditRoles" asp-route-userid="@user.Id">Edit roles</a>
                 </td>
             </tr>
         }
