--- a/CourseApplication/Views/Shared/_Layout.cshtml
+++ b/CourseApplication/Views/Shared/_Layout.cshtml
@@ -33,9 +33,12 @@
                     <ul class="navbar-nav">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Users" asp-action="UserList">Admin console</a>
-                            </li>
+                            if (User.IsInRole("Admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Users" asp-action="UserList">Admin console</a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Cart" asp-action="GetCartById">My Cart</a>
                             </li>
