--- a/CourseApplication/Views/Product/GetAllProducts.cshtml
+++ b/CourseApplication/Views/Product/GetAllProducts.cshtml
@@ -5,24 +5,17 @@
 }
 <div class="container">
     <div class="row d-flex justify-content-between my-3">
-        <form class="w-100" asp-controller="Product" asp-action="GetProductsByName">
-            <div class="input-group mb-3">
-                <label class="control-label"></label>
-                <input type="text" class="form-control" placeholder="Enter product name..." aria-label="Search" aria-describedby="button-addon">
-                <div class="input-group-append">
-                    <button class="btn btn-outline-primary" type="button" id="button-addon">Search</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <div class="row d-flex justify-content-between my-3">
         <h3>Our products</h3>
-        <div>
-            <a class="btn btn-primary" asp-controller="Order" asp-action="GetAllOrders">View all orders</a>
-            <a class="btn btn-primary" asp-controller="Product" asp-action="CreateNewProduct">Create new product</a>
-            <a class="btn btn-primary" asp-controller="Brand" asp-action="CreateNewBrand">Create new brand</a>
-            <a class="btn btn-primary" asp-controller="Category" asp-action="CreateNewCategory">Create new category</a>
-        </div>
+        @{
+            if (User.IsInRole("Admin"))
+            {
+                <div>
+                    <a class="btn btn-primary" asp-controller="Product" asp-action="CreateNewProduct">Create new product</a>
+                    <a class="btn btn-primary" asp-controller="Brand" asp-action="CreateNewBrand">Create new brand</a>
+                    <a class="btn btn-primary" asp-controller="Category" asp-action="CreateNewCategory">Create new category</a>
+                </div>
+            }
+        }
     </div>
     <div class="row d-flex flex-column align-items-center">
         @{
@@ -56,14 +49,19 @@
                                         <p class="text-black-50">@Html.DisplayFor(modelItem => item.ShortDescription)</p>
                                     </div>
                                     <div class="col-sm-2">
-                                        @Html.ActionLink("Details", "GetProductById", new { id = item.ProductId })
+                                        <a class="btn btn-primary w-100 mb-1" asp-action="GetProductById" asp-route-id="@item.ProductId">Details</a>
+                                        @{
+                                            if (User.IsInRole("Admin"))
+                                            {
+                                                <div>
+                                                    <a class="btn btn-primary w-100 mb-1" asp-controller="Product" asp-action="EditProduct" asp-route-id="@item.ProductId">Edit product</a>
+                                                    <form method="post" asp-controller="Product" asp-action="DeleteProduct" asp-route-id="@item.ProductId">
+                                                        <button type="submit" class="btn btn-danger w-100">Delete product</button>
+                                                    </form>
+                                                </div>
+                                            }
+                                        }
                                     </div>
-                                    <form method="get" asp-controller="Product" asp-action="EditProduct" asp-route-id="@item.ProductId">
-                                        <button type="submit" class="btn btn-primary">Edit product</button>
-                                    </form>
-                                    <form method="post" asp-controller="Product" asp-action="DeleteProduct" asp-route-id="@item.ProductId">
-                                        <button type="submit" class="btn btn-primary">Delete product</button>
-                                    </form>
                                 </div>
                             </div>
                         </div>
