--- a/CourseApplication/Views/Product/GetProductById.cshtml
+++ b/CourseApplication/Views/Product/GetProductById.cshtml
@@ -25,46 +25,51 @@
                         <p class="font-weight-light font-italic">Category: <span>@Html.DisplayFor(model => model.CategoryName)</span></p>
                         <h3 class="text-danger font-weight-bold">USD $@Html.DisplayFor(model => model.Price)</h3>
                         <p class="font-weight-light font-italic">Available: <span>@Html.DisplayFor(model => model.Quantity)</span></p>
-                        @{
-                            if (Model.Quantity > 0)
+                        @{if (User.Identity.IsAuthenticated)
                             {
-                                if (Model.InCart == false)
+                                if (Model.Quantity > 0)
                                 {
-                                    <form method="post" asp-controller="CartPosition" asp-action="CreateCartPosition" asp-route-productId="@Model.ProductId">
-                                        <button type="submit" class="btn btn-primary">Add to cart</button>
-                                    </form>
+                                    if (Model.InCart == false)
+                                    {
+                                        <form method="post" asp-controller="CartPosition" asp-action="CreateCartPosition" asp-route-productId="@Model.ProductId">
+                                            <button type="submit" class="btn btn-primary">Add to cart</button>
+                                        </form>
+                                    }
+                                    else
+                                    {
+                                        <form method="post" asp-controller="CartPosition" asp-action="DeleteCartPosition" asp-route-positionId="@Model.CartPositionId">
+                                            <button type="submit" class="btn btn-primary">Remove from cart</button>
+                                        </form>
+                                    }
                                 }
                                 else
                                 {
-                                    <form method="post" asp-controller="CartPosition" asp-action="DeleteCartPosition" asp-route-positionId="@Model.CartPositionId">
-                                        <button type="submit" class="btn btn-primary">Remove from cart</button>
-                                    </form>
+                                    <h4 class="text-danger font-weight-bold">Sorry, but this product is no longer available!</h4>
                                 }
-                            }
-                            else
-                            {
-                                <h4 class="text-danger font-weight-bold">Sorry, but this product is no longer available!</h4>
                             }
                         }
 
                         <p class="font-weight-light font-italic">Orders: <span>@Html.DisplayFor(model => model.OrderNumber)</span></p>
-                        @{ if (Model.InWishlist == false)
+                        @{ if (User.Identity.IsAuthenticated)
                             {
-                                <form method="post" asp-controller="WishlistPosition" asp-action="CreateWishlistPosition" asp-route-productId="@Model.ProductId">
-                                    <button type="submit" class="btn btn-primary">Add to wishlist</button>
-                                </form>
-                            }
-                            else
-                            {
-                                <form method="post" asp-controller="WishlistPosition" asp-action="DeleteWishlistPosition" asp-route-positionId="@Model.WishlistPositionId">
-                                    <button type="submit" class="btn btn-primary">Remove  from wishlist</button>
-                                </form>
+                                if (Model.InWishlist == false)
+                                {
+                                    <form method="post" asp-controller="WishlistPosition" asp-action="CreateWishlistPosition" asp-route-productId="@Model.ProductId">
+                                        <button type="submit" class="btn btn-primary">Add to wishlist</button>
+                                    </form>
+                                }
+                                else
+                                {
+                                    <form method="post" asp-controller="WishlistPosition" asp-action="DeleteWishlistPosition" asp-route-positionId="@Model.WishlistPositionId">
+                                        <button type="submit" class="btn btn-primary">Remove  from wishlist</button>
+                                    </form>
+                                }
                             }
                         }
                         <p class="font-weight-light font-italic">In users wishlists: <span>@Html.DisplayFor(model => model.WishlistNumber)</span></p>
                     </div>
                 </div>
-                <div class="row">
+                <div>
                     <h5>About product</h5>
                     <p class="font-weight-light font-italic"><span>@Html.DisplayFor(model => model.LongDescription)</span></p>
                 </div>
@@ -76,9 +81,12 @@
         <div class="col-10">
             <h4>Product reviews</h4>
         </div>
-        <div class="col-2 d-flex justify-content-end">
-            <a class="btn btn-primary" asp-controller="Review" asp-action="CreateReview" asp-route-id="@Model.ProductId">Write review</a>
-        </div>
+        @if (User.Identity.IsAuthenticated)
+        {
+            <div class="col-2 d-flex justify-content-end">
+                <a class="btn btn-primary" asp-controller="Review" asp-action="CreateReview" asp-route-id="@Model.ProductId">Write review</a>
+            </div>
+        }
     </div>
     <div class="row mt-3 mb-5">
         @foreach (var i in Model.Reviews)
@@ -95,9 +103,9 @@
                 </div>
                 <div class="card-body">
                     <p>@Html.DisplayFor(modelItem => i.Text)</p>
-                    @foreach (var f in i.Files)
+                    @foreach (var file in i.Files)
                     {
-                        <img src="data:image;base64,@System.Convert.ToBase64String(f.DataFiles)" width="100" height="100" />
+                        <img src="data:image;base64,@System.Convert.ToBase64String(file.DataFiles)" width="100" height="100" />
                     }
                 </div>
             </div>
