--- a/CourseApplication/Views/Roles/CreateRole.cshtml
+++ b/CourseApplication/Views/Roles/CreateRole.cshtml
@@ -1,11 +1,17 @@
 ﻿@model string
 
-<div asp-validation-summary="All" class="text-danger"></div>
-
-<form asp-action="CreateRole" method="post">
-    <div class="form-group">
-        <label for="name">New Role</label>
-        <input name="name" class="form-control" />
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <h4 class="my-3">Create New Role</h4>
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <form asp-action="CreateRole" method="post">
+                <div class="form-group">
+                    <label for="name">New Role</label>
+                    <input name="name" class="form-control" />
+                </div>
+                <button type="submit" class="btn btn-primary">Add role</button>
+            </form>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Add role</button>
-</form>
+</div>
