--- a/CourseApplication/Views/Roles/EditRoles.cshtml
+++ b/CourseApplication/Views/Roles/EditRoles.cshtml
@@ -3,7 +3,7 @@
 
 <h2>Change roles for user @Model.UserEmail</h2>
 
-<form asp-action="Edit" method="post">
+<form asp-action="EditRoles" method="post">
     <input type="hidden" name="userId" value="@Model.UserId" />
     <div class="form-group">
         @foreach (IdentityRole role in Model.AllRoles)
