--- a/CourseApplication/Views/Roles/GetRoles.cshtml
+++ b/CourseApplication/Views/Roles/GetRoles.cshtml
@@ -1,20 +1,30 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
-    <h2>Roles List</h2>
+<div class="container">
+    <div class="row d-flex justify-content-between my-3 border-top pt-3">
+        <h4>Roles List</h4>
+        <div>
+            <a class="btn btn-primary" asp-controller="Roles" asp-action="CreateRole">Create New Role</a>
+            <a class="btn btn-primary" asp-controller="Roles" asp-action="UserList">Back</a>
+        </div>
+    </div>
     <table class="table">
+        <tr>
+            <th>Role Name</th>
+            <th></th>
+        </tr>
         @foreach (var role in Model)
         {
             <tr>
                 <td>@role.Name</td>
-                <td>
+                <td class="d-flex justify-content-end">
                     <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
-                        <button type="submit" class="btn btn-sm btn-danger">
-                            Delete
+                        <button type="submit" class="btn btn-danger">
+                            Delete Role
                         </button>
                     </form>
                 </td>
             </tr>
         }
     </table>
-    <a asp-action="CreateRole">Add role</a>
-    <a asp-action="UserList">User list</a>
+</div>
