--- a/CourseApplication/Views/Users/ChangePassword.cshtml
+++ b/CourseApplication/Views/Users/ChangePassword.cshtml
@@ -17,6 +17,6 @@
         <input type="text" asp-for="NewPassword" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Save canges" class="btn btn-outline-dark" />
+        <input type="submit" value="Save changes" class="btn btn-primary" />
     </div>
 </form>
