--- a/CourseApplication/Views/Users/CreateUser.cshtml
+++ b/CourseApplication/Views/Users/CreateUser.cshtml
@@ -19,6 +19,6 @@
         <input type="text" asp-for="Name" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Add user" class="btn btn-outline-secondary" />
+        <input type="submit" value="Add user" class="btn btn-primary" />
     </div>
 </form>
