--- a/CourseApplication/Views/Users/EditUser.cshtml
+++ b/CourseApplication/Views/Users/EditUser.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Add new user";
 }
 
-<h3>Add new user</h3>
+<h3>Edit user data</h3>
 <form asp-action="CreateUser" asp-controller="Users">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -18,6 +18,6 @@
         <input type="text" asp-for="Name" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Save data" class="btn btn-outline-secondary" />
+        <input type="submit" value="Save data" class="btn btn-primary" />
     </div>
 </form>
