--- a/CourseApplication/Views/Users/UserList.cshtml
+++ b/CourseApplication/Views/Users/UserList.cshtml
@@ -3,30 +3,47 @@
     ViewBag.Title = "User list";
 }
 
-<a asp-action="CreateUser">Add new user</a>
-<a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="UserList">Access Rights</a>
-
-<table class="table">
-    <tr>
-        <th>Email</th>
-        <th>Name</th>
-        <th></th>
-    </tr>
-    @foreach (var user in Model)
-    {
-        <tr>
-            <td>@user.Email</td>
-            <td>@user.Name</td>
-            <td>
-                <form asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
-                    <a class="btn btn-sm btn-primary" asp-controller="Roles" asp-action="EditRoles" asp-route-userid="@user.Id">Edit roles</a>
-                    <a class="btn btn-sm btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Change password</a>
-                    <a class="btn btn-sm btn-primary" asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Remove
-                    </button>
-                </form>
-            </td>
-        </tr>
-    }
-</table>
+<div class="container">
+    <div class="row d-flex justify-content-between my-3">
+        <h3>Admin console</h3>
+    </div>
+    <div class="row d-flex justify-content-between my-3 border-top pt-3">
+        <h4>User Order Service</h4>
+        <div>
+            <a class="btn btn-primary" asp-controller="Order" asp-action="GetAllOrders">View all orders</a>
+        </div>
+    </div>
+    <div class="row d-flex justify-content-between my-3 border-top pt-3">
+        <h4>User Control Service</h4>
+        <div>
+            <a class="btn btn-primary" asp-action="CreateUser">Add new user</a>
+            <a class="btn btn-primary" asp-controller="Roles" asp-action="UserList">Roles control</a>
+        </div>
+    </div>
+    <div class="row">
+        <table class="table w-100">
+            <tr>
+                <th>Email</th>
+                <th>Name</th>
+                <th></th>
+            </tr>
+            @foreach (var user in Model)
+            {
+                <tr>
+                    <td>@user.Email</td>
+                    <td>@user.Name</td>
+                    <td class="d-flex justify-content-end">
+                        <form asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
+                            <a class="btn btn-primary" asp-controller="Roles" asp-action="EditRoles" asp-route-userid="@user.Id">Edit roles</a>
+                            <a class="btn btn-primary" asp-action="ChangePassword" asp-route-id="@user.Id">Change password</a>
+                            <a class="btn btn-primary" asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
+                            <button type="submit" class="btn btn-danger">
+                                Remove
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+</div>
